<resources>
    <!-- Other string resources-->

    <string name="app_name">Github Creator</string>
    <string name="nama">Name</string>
    <string name="uname">Username</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="background">Background</string>
    <string name="back">Back</string>
    <string name="url">url</string>
    <string name="query_hint">Input username here</string>
    <string name="empty">Null</string>
    <string name="setting">Setting</string>
    <string name="emptypage">Nothing to show</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>


